--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,8 @@ body{
 
 .tam {
     opacity: 70%;
+    font-size: 0.8em;
+    padding: 0px 20px;
 }
 
 /* end left part */
@@ -146,4 +148,25 @@ button {
 
 button:hover{
     background: linear-gradient(rgb(101, 66, 254),rgb(57, 48, 237)) ;
+}
+
+/* end right part */
+
+@media (max-width:450px) {
+    .container {
+        flex-direction: column;
+    }
+
+    .left, .right {
+        width: 100%;
+    }
+
+    .skills {
+        margin: 10px;
+    }
+
+    h1 {
+        margin-bottom: 10px;
+    }
+    
 }
