--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,8 @@ body{
 .container {
     border-radius: 20px;
     display: flex;
-    width: 70%;
+    width: 50%;
+    height: 60vh;
     box-shadow: 10px 10px 20px rgba(73, 57, 218, 0.15);
 }
 
@@ -38,7 +39,7 @@ body{
     color: white;
     background: linear-gradient(rgb(103, 67, 255),rgb(49, 44, 234));
     padding: 20px;
-    height: 45vh;
+    height: 100%;
 
 
 }
@@ -62,7 +63,7 @@ body{
 
 .tam {
     opacity: 70%;
-    font-size: 0.8em;
+    font-size: 1em;
     padding: 0px 20px;
 }
 
@@ -155,10 +156,16 @@ button:hover{
 @media (max-width:450px) {
     .container {
         flex-direction: column;
+        width: 100%;
+        height: 100%;
     }
 
     .left, .right {
         width: 100%;
+    }
+
+    .left {
+        border-radius: 0px 0px 20px 20px;
     }
 
     .skills {
