--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body{
     border-radius: 20px;
     display: flex;
     width: 50%;
-    height: 60vh;
+    height: 50vh;
     box-shadow: 10px 10px 20px rgba(73, 57, 218, 0.15);
 }
 
@@ -46,8 +46,8 @@ body{
 
 
 .circle {
-    width: 120px;
-    height: 120px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     background: linear-gradient(hsl(255, 72%, 45%),rgba(69, 51, 235, 0.512));
     color: white;
@@ -58,7 +58,8 @@ body{
 }
 
 .result {
-    font-size: 3em;
+    font-size: 4em;
+    font-weight: bolder;
 }
 
 .tam {
@@ -77,7 +78,7 @@ body{
     justify-content: space-around;
     width: 60%;
     padding: 20px;
-    font-size: 0.9em;
+    font-size: 1em;
 }
 
 h1 {
@@ -85,14 +86,14 @@ h1 {
 }
 
 .title_right {
-    width: 80%;
+    width: 90%;
 }
 
 .skills {
-    width: 80%;
+    width: 90%;
     display:flex;
     justify-content: space-between;
-    padding: 10px;
+    padding: 20px;
     border-radius: 10px;
     align-items: center;
 }
@@ -139,12 +140,13 @@ h1 {
 }
 
 button {
-    width: 80%;
-    padding: 10px;
+    width: 90%;
+    padding: 15px;
     border-radius: 20px;
     border: none;
     background-color:#303b59 ;
     color: white;
+    margin-top: 20px;
 }
 
 button:hover{
@@ -157,7 +159,8 @@ button:hover{
     .container {
         flex-direction: column;
         width: 100%;
-        height: 100%;
+        height: 100vh;
+        box-shadow: none;
     }
 
     .left, .right {
